Update Week 1 Workshop.ipynb

--- a/Week 1 Workshop.ipynb
+++ b/Week 1 Workshop.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,11 +68,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "432\n",
+      "11\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here"
+    "print (len(text))\n",
+    "print (len(title))\n",
+    "print(len(author))"
    ]
   },
   {
@@ -84,11 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jabberwocky:Lewis Carrol:'Twas brillig, and t\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here"
+    "summary = title + \":\" + author + \":\" + text[0:20]\n",
+    "print(summary)"
    ]
   },
   {
@@ -100,11 +121,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "71\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here"
+    "noOfWords =text.split()\n",
+    "#print(noOfWords)\n",
+    "print(len(noOfWords))"
    ]
   },
   {
@@ -116,11 +147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here"
+    "# write your code here\n",
+    "lines =text.split('\\n')\n",
+    "print(len(lines))"
    ]
   },
   {
@@ -214,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
