Update Week 1 Workshop.ipynb
Santosh Acharya Finished week1 assignment!!!

--- a/Week 1 Workshop.ipynb
+++ b/Week 1 Workshop.ipynb
@@ -179,11 +179,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Twas\n",
+      "brillig,\n",
+      "and\n",
+      "the\n",
+      "slithy\n",
+      "toves\n",
+      "Did\n",
+      "gyre\n",
+      "and\n",
+      "gimble\n",
+      "in\n",
+      "the\n",
+      "wabe:\n",
+      "All\n",
+      "mimsy\n",
+      "were\n",
+      "the\n",
+      "borogoves,\n",
+      "And\n",
+      "the\n",
+      "mome\n",
+      "raths\n",
+      "outgrabe.\n",
+      "\"Beware\n",
+      "the\n",
+      "Jabberwock,\n",
+      "my\n",
+      "son!\n",
+      "The\n",
+      "jaws\n",
+      "that\n",
+      "bite,\n",
+      "the\n",
+      "claws\n",
+      "that\n",
+      "catch!\n",
+      "Beware\n",
+      "the\n",
+      "Jubjub\n",
+      "bird,\n",
+      "and\n",
+      "shun\n",
+      "The\n",
+      "frumious\n",
+      "Bandersnatch!\"\n",
+      "He\n",
+      "took\n",
+      "his\n",
+      "vorpal\n",
+      "sword\n",
+      "in\n",
+      "hand;\n",
+      "Long\n",
+      "time\n",
+      "the\n",
+      "manxome\n",
+      "foe\n",
+      "he\n",
+      "sought—\n",
+      "So\n",
+      "rested\n",
+      "he\n",
+      "by\n",
+      "the\n",
+      "Tumtum\n",
+      "tree\n",
+      "And\n",
+      "stood\n",
+      "awhile\n",
+      "in\n",
+      "thought.\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# write your for loop here\n",
+    "\n",
+    "\n",
+    "\n",
+    "for word in noOfWords:\n",
+    "    print(word)\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your for loop here"
+    "count = 0 \n",
+    "for word in noOfWords:\n",
+    "    if (word ==\"and\"): count += 1\n",
+    "      \n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(count)\n"
    ]
   },
   {
@@ -195,11 +385,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here"
+    "# write your code here\n",
+    "\n",
+    "count1 = 0 \n",
+    "for word in noOfWords:\n",
+    "    if (word.lower() ==\"and\"): count1 += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# write your code here\n",
+    "print(count1)"
    ]
   },
   {
@@ -215,11 +427,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here"
+    "def fun_string(textstring):\n",
+    "    Words =textstring.split()\n",
+    "    print(len(Words))"
    ]
   },
   {
@@ -231,12 +445,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "71\n"
+     ]
+    }
+   ],
+   "source": [
+    "# write your code here\n",
+    "textstring1= text\n",
+    "fun_string(textstring1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# write your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
