Update Week 2 Workshop.ipynb

--- a/Week 2 Workshop.ipynb
+++ b/Week 2 Workshop.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,11 +51,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 mary\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ages[0],names[2])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[99, 51, 3, 55]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ages[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['jim', 'mary', 'carrie', 'zin']\n"
+     ]
+    }
+   ],
    "source": [
-    "# write code here"
+    "print(names[1:])"
    ]
   },
   {
@@ -63,6 +113,23 @@
    "metadata": {},
    "source": [
     "Lists are _mutable_ which means that they can change.  For example we can append new elements to the `ages` list above like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['eighteen', 6, ['another', 'list']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(stuff[1:])"
    ]
   },
   {
@@ -84,6 +151,28 @@
    "source": [
     "ages.append(33)\n",
     "ages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "steve\n",
+      "jim\n",
+      "mary\n",
+      "carrie\n",
+      "zin\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in names:\n",
+    "    print(x)"
    ]
   },
   {
@@ -192,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
