--- a/Week 2 Workshop.ipynb
+++ b/Week 2 Workshop.ipynb
@@ -239,6 +239,378 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-22-146bc33bd502>:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df1[df1[\"x\"] > 50 ][df1[\"y\"] > 50 ]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>55.3846</td>\n",
+       "      <td>97.1795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>51.5385</td>\n",
+       "      <td>96.0256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>53.0769</td>\n",
+       "      <td>55.6410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>56.6667</td>\n",
+       "      <td>56.0256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>59.2308</td>\n",
+       "      <td>57.9487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>61.2821</td>\n",
+       "      <td>62.1795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>61.5385</td>\n",
+       "      <td>66.4103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>61.7949</td>\n",
+       "      <td>69.1026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>57.4359</td>\n",
+       "      <td>55.2564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>70.5128</td>\n",
+       "      <td>53.7180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>71.5385</td>\n",
+       "      <td>60.6410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>71.5385</td>\n",
+       "      <td>64.4872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>69.4872</td>\n",
+       "      <td>69.4872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>53.0769</td>\n",
+       "      <td>85.2564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>55.3846</td>\n",
+       "      <td>86.0256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>56.6667</td>\n",
+       "      <td>86.0256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>56.1538</td>\n",
+       "      <td>82.9487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>53.8462</td>\n",
+       "      <td>80.6410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>51.2821</td>\n",
+       "      <td>78.7180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>57.9487</td>\n",
+       "      <td>99.4872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>61.7949</td>\n",
+       "      <td>99.1026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>64.8718</td>\n",
+       "      <td>97.5641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>68.4615</td>\n",
+       "      <td>94.1026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>70.7692</td>\n",
+       "      <td>91.0256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>72.0513</td>\n",
+       "      <td>86.4103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>73.8462</td>\n",
+       "      <td>83.3333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>75.1282</td>\n",
+       "      <td>79.1026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>76.6667</td>\n",
+       "      <td>75.2564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>77.6923</td>\n",
+       "      <td>71.4103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>79.7436</td>\n",
+       "      <td>66.7949</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>81.7949</td>\n",
+       "      <td>60.2564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>83.3333</td>\n",
+       "      <td>55.2564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>85.1282</td>\n",
+       "      <td>51.4103</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          x        y\n",
+       "0   55.3846  97.1795\n",
+       "1   51.5385  96.0256\n",
+       "22  53.0769  55.6410\n",
+       "23  56.6667  56.0256\n",
+       "24  59.2308  57.9487\n",
+       "25  61.2821  62.1795\n",
+       "26  61.5385  66.4103\n",
+       "27  61.7949  69.1026\n",
+       "28  57.4359  55.2564\n",
+       "60  70.5128  53.7180\n",
+       "61  71.5385  60.6410\n",
+       "62  71.5385  64.4872\n",
+       "63  69.4872  69.4872\n",
+       "67  53.0769  85.2564\n",
+       "68  55.3846  86.0256\n",
+       "69  56.6667  86.0256\n",
+       "70  56.1538  82.9487\n",
+       "71  53.8462  80.6410\n",
+       "72  51.2821  78.7180\n",
+       "78  57.9487  99.4872\n",
+       "79  61.7949  99.1026\n",
+       "80  64.8718  97.5641\n",
+       "81  68.4615  94.1026\n",
+       "82  70.7692  91.0256\n",
+       "83  72.0513  86.4103\n",
+       "84  73.8462  83.3333\n",
+       "85  75.1282  79.1026\n",
+       "86  76.6667  75.2564\n",
+       "87  77.6923  71.4103\n",
+       "88  79.7436  66.7949\n",
+       "89  81.7949  60.2564\n",
+       "90  83.3333  55.2564\n",
+       "91  85.1282  51.4103"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1[df1[\"x\"] > 50 ][df1[\"y\"] > 50 ]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>55.3846</td>\n",
+       "      <td>97.1795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>51.5385</td>\n",
+       "      <td>96.0256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>46.1538</td>\n",
+       "      <td>94.4872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>42.8205</td>\n",
+       "      <td>91.4103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>40.7692</td>\n",
+       "      <td>88.3333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>83.3333</td>\n",
+       "      <td>55.2564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>85.1282</td>\n",
+       "      <td>51.4103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>50.0000</td>\n",
+       "      <td>95.7692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>47.9487</td>\n",
+       "      <td>95.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>44.1026</td>\n",
+       "      <td>92.6923</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>64 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           x        y\n",
+       "0    55.3846  97.1795\n",
+       "1    51.5385  96.0256\n",
+       "2    46.1538  94.4872\n",
+       "3    42.8205  91.4103\n",
+       "4    40.7692  88.3333\n",
+       "..       ...      ...\n",
+       "90   83.3333  55.2564\n",
+       "91   85.1282  51.4103\n",
+       "139  50.0000  95.7692\n",
+       "140  47.9487  95.0000\n",
+       "141  44.1026  92.6923\n",
+       "\n",
+       "[64 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1[df1[\"y\"] > 50 ]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
@@ -342,6 +714,22 @@
    "source": [
     "df1.describe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
