Add education notebook

--- a/Week 1 Workshop.ipynb
+++ b/Week 1 Workshop.ipynb
@@ -464,6 +464,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "santosh\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"santosh\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
