--- a/Week 2 Workshop.ipynb
+++ b/Week 2 Workshop.ipynb
@@ -239,17 +239,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_x = df1[\"x\"] > 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.filter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ipython-input-22-146bc33bd502>:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  df1[df1[\"x\"] > 50 ][df1[\"y\"] > 50 ]\n"
+      " Volume in drive C is Windows\n",
+      " Volume Serial Number is 0009-F64B\n",
+      "\n",
+      " Directory of C:\\Users\\cp552612\\OptusU\\MQ\\weekly-workshops-Victor2806\\practicals-master\n",
+      "\n",
+      "16/07/2021  11:35 AM    <DIR>          .\n",
+      "16/07/2021  11:35 AM    <DIR>          ..\n",
+      "06/07/2021  11:05 AM             1,928 .gitignore\n",
+      "09/07/2021  12:44 AM    <DIR>          .ipynb_checkpoints\n",
+      "11/07/2021  10:57 AM    <DIR>          files\n",
+      "06/07/2021  11:05 AM             1,104 LICENSE\n",
+      "06/07/2021  11:05 AM               135 README.md\n",
+      "09/07/2021  12:32 AM            11,600 Week 1 Workshop.ipynb\n",
+      "16/07/2021  11:35 AM            26,092 Week 2 Workshop.ipynb\n",
+      "               5 File(s)         40,859 bytes\n",
+      "               4 Dir(s)  87,766,028,288 bytes free\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "! dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>55.3846</td>\n",
+       "      <td>97.1795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>51.5385</td>\n",
+       "      <td>96.0256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>142 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           x        y\n",
+       "0    55.3846  97.1795\n",
+       "1    51.5385  96.0256\n",
+       "2        NaN      NaN\n",
+       "3        NaN      NaN\n",
+       "4        NaN      NaN\n",
+       "..       ...      ...\n",
+       "137      NaN      NaN\n",
+       "138      NaN      NaN\n",
+       "139      NaN      NaN\n",
+       "140      NaN      NaN\n",
+       "141      NaN      NaN\n",
+       "\n",
+       "[142 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.where((df1[\"x\"] > 50)  & (df1[\"y\"] > 50) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -482,13 +648,13 @@
        "91  85.1282  51.4103"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1[df1[\"x\"] > 50 ][df1[\"y\"] > 50 ]\n",
+    "df1[ (df1[\"x\"] > 50)  & (df1[\"y\"] > 50) ]\n",
     "\n"
    ]
   },
